<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:baselineAligned="false"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hint_book_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/hint_book_price"
            android:textAppearance="?android:textAppearanceSmall"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookQuantity"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/saleBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale"
            android:gravity="center"
            android:focusable="false"
            android:onClick="saleBookButton"
            />
    </LinearLayout>
</LinearLayout>